mdm-dqm-validate-manifest[1].yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mdm-dqm-dev-svc
  namespace: mdm-dqm-dev-ns
  labels:
    application: dqm-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /dqm
spec:
  ports:
    -
      port: 80
      targetPort: 5000
  selector:
    application: dqm-dev
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdm-dqm-dev-deployment
  namespace: mdm-dqm-dev-ns
  labels:
    application: dqm-dev
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  revisionHistoryLimit: 2
  paused: false
  replicas: 5
  minReadySeconds: 20
  selector:
    matchLabels:
      application: dqm-dev
  template:
    metadata:
      labels:
        application: dqm-dev
    spec:
      serviceAccountName: k8s-mdm-dev-container-sa
      containers:
        - name: dqm-devdeploymentimage
          image: 597072404137.dkr.ecr.eu-central-1.amazonaws.com/abb-ous-mdm-dqm-dev-dev-non-prod-ecr:1192k21dqm
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "200Mi"
              cpu: "200m"
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
